Closed
Bug 1433408
Opened 8 years ago
Closed 7 years ago
Crash in dbroverlayiconbackuped.dll@0x47c2
Categories
(External Software Affecting Firefox :: Other, defect)
Tracking
(firefox61 fixed)
RESOLVED
FIXED
Future
Tracking | Status | |
---|---|---|
firefox61 | --- | fixed |
People
(Reporter: baffclan, Assigned: marco)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
1.15 KB,
patch
|
bugzilla
:
review+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-1e1ec74b-ff75-415f-9b39-a48290180126.
=============================================================
Top 10 frames of crashing thread:
0 dbroverlayiconbackuped.dll dbroverlayiconbackuped.dll@0x47c2
1 dbroverlayiconbackuped.dll dbroverlayiconbackuped.dll@0x4651
2 dbroverlayiconbackuped.dll dbroverlayiconbackuped.dll@0x49cf
3 dbroverlayiconbackuped.dll dbroverlayiconbackuped.dll@0x2db1bf
4 dbroverlayiconbackuped.dll dbroverlayiconbackuped.dll@0x490e
5 dbroverlayiconbackuped.dll dbroverlayiconbackuped.dll@0x2db1bf
6 dbroverlayiconbackuped.dll dbroverlayiconbackuped.dll@0x2db1bf
7 dbroverlayiconbackuped.dll dbroverlayiconbackuped.dll@0x47fa
8 dbroverlayiconbackuped.dll dbroverlayiconbackuped.dll@0x2db1bf
9 dbroverlayiconbackuped.dll dbroverlayiconbackuped.dll@0x16ad37
=============================================================
Updated•7 years ago
|
status-firefox60:
affected → ---
Product: Core → Thunderbird
Comment 1•7 years ago
|
||
Sorry, but the crash report clearly states "Firefox".
Product: Thunderbird → Firefox
Comment 2•7 years ago
|
||
This appears to be caused by the Dell Backup and Recovery tool, which has an updated version online: 1.9.2.8. There are a lot of crash reports for various products online that are caused by it. Can you try updating your copy to see if this fixes the problem?
Flags: needinfo?(baffclan)
(In reply to Panos Astithas [:past] (please ni?) from comment #2)
Yes, I using Dell's PC.
It seems to be a crash caused by "Dell Backup and Recovery tool".
There was similar crash information in adobe.
https://helpx.adobe.com/elements-organizer/kb/elements-organizer-crashes-on-dell.html
"Dell Backup and Recovery tool" was the latest version.
Flags: needinfo?(baffclan)
Comment 4•7 years ago
|
||
Hey Marco, I think you have some experience with the dll blocklist? Do you think we could blocklist this dll?
Flags: needinfo?(mcastelluccio)
Assignee | ||
Comment 5•7 years ago
|
||
(In reply to Panos Astithas [:past] (please ni?) from comment #4)
> Hey Marco, I think you have some experience with the dll blocklist? Do you
> think we could blocklist this dll?
We can definitely try, but we'd need someone to verify the block is working and not causing additional problems.
Baffclan, could you test a custom build?
Component: General → Other
Flags: needinfo?(mcastelluccio)
Product: Firefox → External Software Affecting Firefox
Version: Trunk → unspecified
Assignee | ||
Comment 6•7 years ago
|
||
You can download the custom build from here: https://queue.taskcluster.net/v1/task/Y406GyVwTBau1pYLlRvhYQ/runs/0/artifacts/public/build/target.zip.
Flags: needinfo?(baffclan)
(In reply to Marco Castelluccio [:marco] from comment #6)
> You can download the custom build from here:
Thank you for making a test build.
I'll try using this build.
However, it is a crash with low reproducibility.
Flags: needinfo?(baffclan)
(In reply to Marco Castelluccio [:marco] from comment #6)
> You can download the custom build from here:
> https://queue.taskcluster.net/v1/task/Y406GyVwTBau1pYLlRvhYQ/runs/0/
> artifacts/public/build/target.zip.
Cannot reproduce this problem with test build and nightly builds.
Assignee | ||
Comment 9•7 years ago
|
||
If you can't reproduce it with Nightly builds either then we can't know if the patch is actually fixing the crash. Given that it doesn't seem to cause issues, I would land the patch anyway.
Assignee | ||
Comment 10•7 years ago
|
||
Updated•7 years ago
|
Attachment #8960910 -
Flags: review?(aklotz) → review+
Comment 11•7 years ago
|
||
Pushed by mcastelluccio@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/6f79a4a67724
Blocklist Dell Backup and Recovery tool DLLs as they cause crashes. r=aklotz
Comment 12•7 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
status-firefox61:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → Future
You need to log in
before you can comment on or make changes to this bug.
Description
•