Bug 1433408 - Blocklist Dell Backup and Recovery tool DLLs as they cause crashes. r=aklotz

--HG--
extra : rebase_source : 85809f1757f257be0e0bf8848b0cc104e0543eb6